[tool.poetry]
name = "croak"
version = "0.1.0"
description = "Create synthetic audio using neural networks"
authors = ["Sean Gallagher <stgallag@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow-cpu = "^2.9.1"
numpy = "^1.22.4"
SoundFile = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
